--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,6 @@ h4 {
 img {border-style: solid;
   border-width: 1px;
 }
+
+.indifferent {box-shadow:  -1px 1px #22aa44, -2px 2px #22aa44, -3px 3px #22aa44, -4px 4px #22aa44, -5px 5px #22aa44;}
+.dubious {box-shadow:  -1px 1px #22aa44, -2px 2px #22aa44, -3px 3px #22aa44, -4px 4px #22aa44, -5px 5px #22aa44;}
