--- a/css/style.css
+++ b/css/style.css
@@ -59,5 +59,5 @@ img {border-style: solid;
   border-width: 1px;
 }
 
-.indifferent {box-shadow:  -1px 1px #22aa44, -2px 2px #22aa44, -3px 3px #22aa44, -4px 4px #22aa44, -5px 5px #22aa44;}
+.indifferent {box-shadow:  -1px 1px #dddd22, -2px 2px #dddd22, -3px 3px #dddd22, -4px 4px #dddd22, -5px 5px #dddd22;}
 .dubious {box-shadow:  -1px 1px #22aa44, -2px 2px #22aa44, -3px 3px #22aa44, -4px 4px #22aa44, -5px 5px #22aa44;}
