--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ h4 {
   display: inline-block;
   padding: 5px;
   margin: 20px 0 0 0;
-  background: linear-gradient (135deg, gray, white);
+  background: linear-gradient (to right, #FFF, #000);
 }
 
 .amiable {
