--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ h4 {
   display: inline-block;
   padding: 5px;
   margin: 20px 0 0 0;
+  background: linear-gradient (to right, #FFF, #000);
 }
 
 .amiable {
@@ -53,4 +54,16 @@ h4 {
 
 .large {
   width: 303%;
+}
+
+img {border-style: solid;
+  border-width: 1px;
+}
+
+.indifferent {box-shadow:  -1px 1px #d8d809, -2px 2px #d8d809, -3px 3px #d8d809, -4px 4px #d8d809, -5px 5px #d8d809;}
+
+.dubious {box-shadow:  -1px 1px #de1e1e, -2px 2px #de1e1e, -3px 3px #de1e1e, -4px 4px #de1e1e, -5px 5px #de1e1e;}
+
+body {background-image: url("../images/white-wood.jpg");
+  background-size: cover;
 }
